welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var x=0


for (j <-0 to 6){
 setPos(j,i)
 
 ecritMessage(x)
 x=x+1	
}



}
